# Project-3-Real-Time-AI-Sales-Lead-Intelligence-Engine

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  TASKS.md  docker-compose.prod.yml  docker-compose.yml
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: a92126cea139_initial_schema.py
backend/app/: config.py  dependencies.py  main.py
backend/app/ai/: openai_client.py  pipeline.py
backend/app/api/: router.py
backend/app/core/: database.py  exceptions.py  middleware.py  permissions.py  security.py
backend/app/models/: __init__.py  audit_log.py  base.py  call.py  call_analysis.py  call_transcript.py  campaign.py  db_types.py  deal_prediction.py  lead.py  lead_flow.py  notification.py  tenant.py  user.py  webhook.py
backend/app/realtime/: call_stream_handler.py  event_publisher.py  socket_manager.py
backend/app/schemas/: analysis.py  auth.py  call.py  campaign.py  common.py  lead.py  lead_flow.py  prediction.py  tenant.py  user.py
backend/app/services/: analysis_service.py  auth_service.py  call_service.py  guidance_service.py  lead_service.py  notification_service.py  prediction_service.py  storage_service.py  tenant_service.py  transcription_service.py  twilio_service.py  user_service.py  webhook_service.py
backend/app/tasks/: analysis_tasks.py  celery_app.py  notification_tasks.py  (+2 more)
backend/docs/: MEMBER1_BACKEND_TESTING.md
backend/tests/: conftest.py  test_analysis.py  test_auth.py  test_calls.py  test_leads.py  test_member1_backend.py  test_predictions.py  test_realtime.py
(+114 files in other folders)
